Request and Response changed for the post attandence API
